--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "babylonjs": "^4.2.0",
+    "babylonjs-materials": "^4.2.0",
     "bootstrap": "^4.5.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
